--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello World</title>
 </head>
 <body>
-<h1>Web Development from Cousera</h1>
+<h1>Web Development from Coursera</h1>
 </body>
 </html>
